--- a/tut.html
+++ b/tut.html
@@ -16,8 +16,8 @@
 </script>
 
 <script id="shader-vs" type="x-shader/x-vertex">
-    attribute vec3 aVertexPosition;
-    attribute vec4 aVertexColor;
+    attribute vec3 vaVertexPosition;
+    attribute vec4 vaVertexColor;
 
     uniform mat4 uMVMatrix;
     uniform mat4 uPMatrix;
@@ -25,8 +25,8 @@
     varying vec4 vColor;
 
     void main(void) {
-        gl_Position = uPMatrix*uMVMatrix*vec4(aVertexPosition, 1.0);
-        vColor = aVertexColor;
+        gl_Position = uPMatrix*uMVMatrix*vec4(vaVertexPosition, 1.0);
+        vColor = vaVertexColor;
     }
 </script>
 
@@ -82,6 +82,22 @@
         return shader;
     }
 
+    function getText(id) {
+        var shaderScript = document.getElementById(id);
+        if (!shaderScript) {
+            return null;
+        }
+
+        var str = "";
+        var k = shaderScript.firstChild;
+        while (k) {
+            if (k.nodeType == 3) {
+                str += k.textContent;
+            }
+            k = k.nextSibling;
+        }
+        return str;
+    }
 
     var shaderProgram;
 
@@ -99,24 +115,28 @@
         }
 
         gl.useProgram(shaderProgram);
-
-        shaderProgram.vertexPositionAttribute = gl.getAttribLocation(shaderProgram, "aVertexPosition");
-        gl.enableVertexAttribArray(shaderProgram.vertexPositionAttribute);
+        shaderProgram.vertexAttribute = [];
+        getText("shader-vs").split('\n').forEach(function (a) {
+            var l = a.match(/va[A-Za-z]*;/);
+            var c = a.match(/vec[1-4]/);
+            a.match('attribute') && Array.isArray(l) && l.forEach(function (b) {
+                var name = b.slice(0, b.length - 1);
+                var attr = {
+                    name: name,
+                    len: Number(c[0][3]),
+                    location: gl.getAttribLocation(shaderProgram, name)
+                };
+                shaderProgram.vertexAttribute.push(attr);
+                gl.enableVertexAttribArray(attr.location);
+            });
+        });
 
         shaderProgram.pMatrixUniform = gl.getUniformLocation(shaderProgram, "uPMatrix");
         shaderProgram.mvMatrixUniform = gl.getUniformLocation(shaderProgram, "uMVMatrix");
     }
 
-
     var mvMatrix = mat4.create();
     var pMatrix = mat4.create();
-
-    function setMatrixUniforms() {
-        gl.uniformMatrix4fv(shaderProgram.pMatrixUniform, false, pMatrix);
-        gl.uniformMatrix4fv(shaderProgram.mvMatrixUniform, false, mvMatrix);
-    }
-
-
 
     var squareVertexPositionBuffer;
 
@@ -124,7 +144,7 @@
         squareVertexPositionBuffer = gl.createBuffer();
         gl.bindBuffer(gl.ARRAY_BUFFER, squareVertexPositionBuffer);
         var vertices = [];
-        var sq = 4000;
+        var sq = 400;
         for (var i = 0; i < sq; i++) {
             var v = [
                  [0.5, 0.5 , 0.0],
@@ -136,15 +156,22 @@
                 v[j][0] += (i % 32) * 3;
                 v[j][1] += (i / 32) * 3;
             }
+            var c = [Math.random(), Math.random(), Math.random(), 1.0];
             vertices = vertices.concat(v[0]);
+            var c = [Math.random(), Math.random(), Math.random(), 1.0];
+            vertices = vertices.concat(c);
             vertices = vertices.concat(v[1]);
+            vertices = vertices.concat(c);
             vertices = vertices.concat(v[2]);
+            vertices = vertices.concat(c);
             vertices = vertices.concat(v[2]);
+            vertices = vertices.concat(c);
             vertices = vertices.concat(v[1]);
+            vertices = vertices.concat(c);
             vertices = vertices.concat(v[3]);
+            vertices = vertices.concat(c);
         }
         gl.bufferData(gl.ARRAY_BUFFER, new Float32Array(vertices), gl.STATIC_DRAW);
-        squareVertexPositionBuffer.itemSize = 3;
         squareVertexPositionBuffer.numItems = sq * 6;
 
     }
@@ -167,7 +194,12 @@
             //mat4.scale(mvMatrix, [0.2, 0.2, 0.2]);
 
             gl.bindBuffer(gl.ARRAY_BUFFER, squareVertexPositionBuffer);
-            gl.vertexAttribPointer(shaderProgram.vertexPositionAttribute, squareVertexPositionBuffer.itemSize, gl.FLOAT, false, 0, 0);
+            var offs = 0, stride = 0;
+            shaderProgram.vertexAttribute.forEach(function (a) { stride += a.len * 4; });
+            shaderProgram.vertexAttribute.forEach(function (a) {
+                gl.vertexAttribPointer(a.location, a.len, gl.FLOAT, false, stride, offs);
+                offs += a.len * 4;
+            });
             gl.uniformMatrix4fv(shaderProgram.pMatrixUniform, false, pMatrix);
             gl.uniformMatrix4fv(shaderProgram.mvMatrixUniform, false, mvMatrix);
             gl.drawArrays(gl.TRIANGLES, 0, squareVertexPositionBuffer.numItems);
