--- a/tut.html
+++ b/tut.html
@@ -1,13 +1,12 @@
-
 <html>
 
 <head>
-<title>Learning WebGL &mdash; lesson 1</title>
-<meta http-equiv="content-type" content="text/html; charset=ISO-8859-1">
+  <title>Learning WebGL &mdash; lesson 1</title>
+  <meta http-equiv="content-type" content="text/html; charset=ISO-8859-1">
 
-<script type="text/javascript" src="glMatrix-0.9.5.min.js"></script>
+  <script type="text/javascript" src="glMatrix-0.9.5.min.js"></script>
 
-<script id="shader-fs" type="x-shader/x-fragment">
+  <script id="shader-fs" type="x-shader/x-fragment">
     precision mediump float;
     varying vec4 vColor;
     varying vec2 vUV;
@@ -16,9 +15,9 @@
         r=1.0-r*r;
         gl_FragColor = vec4(vColor.xyz,r);
     }
-</script>
+  </script>
 
-<script id="shader-vs" type="x-shader/x-vertex">
+  <script id="shader-vs" type="x-shader/x-vertex">
     attribute vec3 vaVertexPosition;
     attribute vec4 vaVertexColor;
     attribute vec3 vaUV;
@@ -42,307 +41,310 @@
         vColor = vaVertexColor;
         vUV = vaUV.xy;
     }
-</script>
+  </script>
 
 
-<script type="text/javascript">
+  <script type="text/javascript">
 
     var gl;
     function initGL(canvas) {
-        try {
-            gl = canvas.getContext("experimental-webgl");
-            gl.viewportWidth = canvas.width;
-            gl.viewportHeight = canvas.height;
-        } catch (e) {
-        }
-        if (!gl) {
-            alert("Could not initialise WebGL, sorry :-(");
-        }
+      try {
+        gl = canvas.getContext("experimental-webgl");
+        gl.viewportWidth = canvas.width;
+        gl.viewportHeight = canvas.height;
+      } catch (e) {
+      }
+      if (!gl) {
+        alert("Could not initialise WebGL, sorry :-(");
+      }
     }
 
     /**
     * @param hsv 0~1
     */
     function HSVtoRGB(h, s, v) {
-        if (0 == s) {
-            return [v, v, v];
-        }
-        if (1 < s) s = 1;
-        if (h < 0) h++;
-        if (1 < h) h--;
-        var i = Math.floor(h * 6);
-        var f = h * 6 - i;
-        var p = v * (1 - s);
-        var q = v * (1 - f * s);
-        var t = v * (1 - (1 - f) * s);
-        switch (i) {
-            case 0:
-                return [v, t, p];
-            case 1:
-                return [q, v, p];
-            case 2:
-                return [p, v, t];
-            case 3:
-                return [p, q, v];
-            case 4:
-                return [t, p, v];
-            default:
-                return [v, p, q];
-        }
+      if (0 == s) {
+        return [v, v, v];
+      }
+      if (1 < s) s = 1;
+      if (h < 0) h++;
+      if (1 < h) h--;
+      var i = Math.floor(h * 6);
+      var f = h * 6 - i;
+      var p = v * (1 - s);
+      var q = v * (1 - f * s);
+      var t = v * (1 - (1 - f) * s);
+      switch (i) {
+        case 0:
+          return [v, t, p];
+        case 1:
+          return [q, v, p];
+        case 2:
+          return [p, v, t];
+        case 3:
+          return [p, q, v];
+        case 4:
+          return [t, p, v];
+        default:
+          return [v, p, q];
+      }
     }
 
     function getShader(gl, id) {
-        var shaderScript = document.getElementById(id);
-        if (!shaderScript) {
-            return null;
+      var shaderScript = document.getElementById(id);
+      if (!shaderScript) {
+        return null;
+      }
+
+      var str = "";
+      var k = shaderScript.firstChild;
+      while (k) {
+        if (k.nodeType == 3) {
+          str += k.textContent;
         }
+        k = k.nextSibling;
+      }
 
-        var str = "";
-        var k = shaderScript.firstChild;
-        while (k) {
-            if (k.nodeType == 3) {
-                str += k.textContent;
-            }
-            k = k.nextSibling;
-        }
+      var shader;
+      if (shaderScript.type == "x-shader/x-fragment") {
+        shader = gl.createShader(gl.FRAGMENT_SHADER);
+      } else if (shaderScript.type == "x-shader/x-vertex") {
+        shader = gl.createShader(gl.VERTEX_SHADER);
+      } else {
+        return null;
+      }
 
-        var shader;
-        if (shaderScript.type == "x-shader/x-fragment") {
-            shader = gl.createShader(gl.FRAGMENT_SHADER);
-        } else if (shaderScript.type == "x-shader/x-vertex") {
-            shader = gl.createShader(gl.VERTEX_SHADER);
-        } else {
-            return null;
-        }
+      gl.shaderSource(shader, str);
+      gl.compileShader(shader);
 
-        gl.shaderSource(shader, str);
-        gl.compileShader(shader);
+      if (!gl.getShaderParameter(shader, gl.COMPILE_STATUS)) {
+        alert(gl.getShaderInfoLog(shader));
+        return null;
+      }
 
-        if (!gl.getShaderParameter(shader, gl.COMPILE_STATUS)) {
-            alert(gl.getShaderInfoLog(shader));
-            return null;
-        }
-
-        return shader;
+      return shader;
     }
 
     function getText(id) {
-        var shaderScript = document.getElementById(id);
-        if (!shaderScript) {
-            return null;
-        }
+      var shaderScript = document.getElementById(id);
+      if (!shaderScript) {
+        return null;
+      }
 
-        var str = "";
-        var k = shaderScript.firstChild;
-        while (k) {
-            if (k.nodeType == 3) {
-                str += k.textContent;
-            }
-            k = k.nextSibling;
+      var str = "";
+      var k = shaderScript.firstChild;
+      while (k) {
+        if (k.nodeType == 3) {
+          str += k.textContent;
         }
-        return str;
+        k = k.nextSibling;
+      }
+      return str;
     }
 
     var shaderProgram;
 
     function initShaders() {
-        var fragmentShader = getShader(gl, "shader-fs");
-        var vertexShader = getShader(gl, "shader-vs");
+      var fragmentShader = getShader(gl, "shader-fs");
+      var vertexShader = getShader(gl, "shader-vs");
 
-        shaderProgram = gl.createProgram();
-        gl.attachShader(shaderProgram, vertexShader);
-        gl.attachShader(shaderProgram, fragmentShader);
-        gl.linkProgram(shaderProgram);
+      shaderProgram = gl.createProgram();
+      gl.attachShader(shaderProgram, vertexShader);
+      gl.attachShader(shaderProgram, fragmentShader);
+      gl.linkProgram(shaderProgram);
 
-        if (!gl.getProgramParameter(shaderProgram, gl.LINK_STATUS)) {
-            alert("Could not initialise shaders");
-        }
+      if (!gl.getProgramParameter(shaderProgram, gl.LINK_STATUS)) {
+        alert("Could not initialise shaders");
+      }
 
-        gl.useProgram(shaderProgram);
-        shaderProgram.vertexAttribute = [];
-        getText("shader-vs").split('\n').forEach(function (a) {
-            var l = a.match(/va[A-Za-z]*;/);
-            var c = a.match(/vec[1-4]/);
-            a.match('attribute') && Array.isArray(l) && l.forEach(function (b) {
-                var name = b.slice(0, b.length - 1);
-                var attr = {
-                    name: name,
-                    len: Number(c[0][3]),
-                    location: gl.getAttribLocation(shaderProgram, name)
-                };
-                shaderProgram.vertexAttribute.push(attr);
-                gl.enableVertexAttribArray(attr.location);
-            });
+      gl.useProgram(shaderProgram);
+      shaderProgram.vertexAttribute = [];
+      getText("shader-vs").split('\n').forEach(function (a) {
+        var l = a.match(/va[A-Za-z]*;/);
+        var c = a.match(/vec[1-4]/);
+        a.match('attribute') && Array.isArray(l) && l.forEach(function (b) {
+          var name = b.slice(0, b.length - 1);
+          var attr = {
+            name: name,
+            len: Number(c[0][3]),
+            location: gl.getAttribLocation(shaderProgram, name)
+          };
+          shaderProgram.vertexAttribute.push(attr);
+          gl.enableVertexAttribArray(attr.location);
         });
+      });
 
-        shaderProgram.pMatrixUniform = gl.getUniformLocation(shaderProgram, "uPMatrix");
-        shaderProgram.mvMatrixUniform = gl.getUniformLocation(shaderProgram, "uMVMatrix");
-        shaderProgram.uScr = gl.getUniformLocation(shaderProgram, "uScr");
+      shaderProgram.pMatrixUniform = gl.getUniformLocation(shaderProgram, "uPMatrix");
+      shaderProgram.mvMatrixUniform = gl.getUniformLocation(shaderProgram, "uMVMatrix");
+      shaderProgram.uScr = gl.getUniformLocation(shaderProgram, "uScr");
     }
 
     function BSpline(f, p) {
-        var N = p.length;
-        f *= N;
-        if (f < 0)
-            f = 0;
-        if (f > N)
-            f = N - 0.00001;
-        var o = Math.floor(f); //offset
-        var u = f - o; //interp
+      var N = p.length;
+      f *= N;
+      if (f < 0)
+        f = 0;
+      if (f > N)
+        f = N - 0.00001;
+      var o = Math.floor(f); //offset
+      var u = f - o; //interp
 
-        var point = Array(4);
-        for (var i = 0; i < 4; i++) {
-            if (i + o - 1 < 0)
-                point[i] = p[0];
-            else if (i + o - 1 > N - 1)
-                point[i] = p[N - 1];
-            else
-                point[i] = p[i + o - 1];
-        }
-        var key = [
-              (point[0] + 4 * point[1] + point[2]) / 6,
-              (point[2] - point[0]) / 2,
-              (point[0] - 2 * point[1] + point[2]) / 2,
-              (3 * (point[1] - point[2]) + point[3] - point[0]) / 6
-        ];
-        return (key[0] + u * (key[1] + u * (key[2] + key[3] * u)));
+      var point = Array(4);
+      for (var i = 0; i < 4; i++) {
+        if (i + o - 1 < 0)
+          point[i] = p[0];
+        else if (i + o - 1 > N - 1)
+          point[i] = p[N - 1];
+        else
+          point[i] = p[i + o - 1];
+      }
+      var key = [
+            (point[0] + 4 * point[1] + point[2]) / 6,
+            (point[2] - point[0]) / 2,
+            (point[0] - 2 * point[1] + point[2]) / 2,
+            (3 * (point[1] - point[2]) + point[3] - point[0]) / 6
+      ];
+      return (key[0] + u * (key[1] + u * (key[2] + key[3] * u)));
     }
 
-    var mvMatrix = mat4.create();
-    var pMatrix = mat4.create();
-
-    var squareVertexPositionBuffer;
+    var squareVertexPositionBuffer = null;
 
     function initBuffers() {
-        squareVertexPositionBuffer = gl.createBuffer();
-        gl.bindBuffer(gl.ARRAY_BUFFER, squareVertexPositionBuffer);
-        var vertices = [];
-        var branch = function (root,age) {
-            if (age >= 7)
-                return;
-            var pose = mat4.create();
-            mat4.set(root.pose, pose);
-
-            var sq = 60 - age * 10;
-            for (var i = 0; i < sq; i++) {
-                var ca = 0;
-                var vz = 2.0 - age * 0.2;
-                var uv = [
-                    [0, 1.7, vz],
-                    [-1.6, -1, vz],
-                    [1.6, -1, vz]
-                ];
-                var center = [0, i*1.5, 0];
-                mat4.multiplyVec3(pose, center);
-                var c = HSVtoRGB(age * 0.2 + i / sq / 3, 0.8, 1.0);
-                c = c.concat(ca);
-
-                var vert = [];
-                vert = vert.concat(center);
-                vert = vert.concat(c);
-                vert = vert.concat(uv[0]);
-
-                vert = vert.concat(center);
-                vert = vert.concat(c);
-                vert = vert.concat(uv[1]);
-
-                vert = vert.concat(center);
-                vert = vert.concat(c);
-                vert = vert.concat(uv[2]);
-
-                vertices = vertices.concat(vert);
-            }
-            var branches = 4;
-            for (var i = 1; i < branches; i++) {
-                var br = mat4.create();
-                var p = [0, i * 8, 0];
-                mat4.identity(br);
-                mat4.translate(br, p);
-                mat4.rotate(br, i * 4, [0, 1, 0]);
-                mat4.rotate(br, 0.8, [1, 3, 2]);
-                var scale = 0.03;
-                mat4.scale(br, [1.0 - i * scale, 1.0 - i * scale, 1.0 - i * scale]);
-                mat4.multiply(br, pose, br);
-
-                branch({
-                    pose:br
-                }, age + 1);
-            }
-        }
+      squareVertexPositionBuffer = squareVertexPositionBuffer || gl.createBuffer();
+      gl.bindBuffer(gl.ARRAY_BUFFER, squareVertexPositionBuffer);
+      var vertices = [];
+      var branch = function (root, age) {
+        if (age >= 7)
+          return;
         var pose = mat4.create();
-        mat4.identity(pose);
-        branch({
-            pose:pose
-        }, 1);
-        var stride = 0;
-        shaderProgram.vertexAttribute.forEach(function (a) { stride += a.len; });
-        gl.bufferData(gl.ARRAY_BUFFER, new Float32Array(vertices), gl.STATIC_DRAW);
-        squareVertexPositionBuffer.numItems = vertices.length / stride;
+        mat4.set(root.pose, pose);
+
+        var sq = 60 - age * 10;
+        for (var i = 0; i < sq; i++) {
+          var ca = 0;
+          var vz = 2.0 - age * 0.2;
+          var uv = [
+              [0, 1.7, vz],
+              [-1.6, -1, vz],
+              [1.6, -1, vz]
+          ];
+          var center = [0, i * 1.5, 0];
+          mat4.multiplyVec3(pose, center);
+          var c = HSVtoRGB(age * 0.2 + i / sq / 3, 0.6, 1.0);
+          c = c.concat(ca);
+
+          var vert = [];
+          vert = vert.concat(center);
+          vert = vert.concat(c);
+          vert = vert.concat(uv[0]);
+
+          vert = vert.concat(center);
+          vert = vert.concat(c);
+          vert = vert.concat(uv[1]);
+
+          vert = vert.concat(center);
+          vert = vert.concat(c);
+          vert = vert.concat(uv[2]);
+
+          vertices = vertices.concat(vert);
+        }
+        var branches = 4;
+        for (var i = 1; i < branches; i++) {
+          var br = mat4.create();
+          var p = [0, i * 8, 0];
+          mat4.identity(br);
+          mat4.translate(br, p);
+          mat4.rotate(br, i * 4, [0, 1, 0]);
+          mat4.rotate(br, 0.8, [1, 3, 2]);
+          var scale = 0.03;
+          mat4.scale(br, [1.0 - i * scale, 1.0 - i * scale, 1.0 - i * scale]);
+          mat4.multiply(br, pose, br);
+
+          branch({
+            pose: br
+          }, age + 1);
+        }
+      }
+      var pose = mat4.create();
+      mat4.identity(pose);
+      branch({
+        pose: pose
+      }, 1);
+      var stride = shaderProgram.vertexAttribute.reduce(function (b, a) { return b + a.len; }, 0);
+      gl.bufferData(gl.ARRAY_BUFFER, new Float32Array(vertices), gl.STATIC_DRAW);
+      squareVertexPositionBuffer.numItems = vertices.length / stride;
     }
 
     var count = 0;
 
     function drawScene() {
-        count++;
-        gl.viewport(0, 0, gl.viewportWidth, gl.viewportHeight);
-        gl.clear(gl.COLOR_BUFFER_BIT | gl.DEPTH_BUFFER_BIT);
+      count++;
+      var mvMatrix = mat4.create();
+      var pMatrix = mat4.create();
 
-        mat4.perspective(45, gl.viewportWidth / gl.viewportHeight, 1, 1000.0, pMatrix);
+      gl.viewport(0, 0, gl.viewportWidth, gl.viewportHeight);
+      gl.clear(gl.COLOR_BUFFER_BIT);
 
-        for (var i = 0; i < 1; i++) {
-            mat4.identity(mvMatrix);
-            //mat4.scale(mvMatrix, [0.2, 0.2, 0.2]);
+      mat4.perspective(45, gl.viewportWidth / gl.viewportHeight, 1, 1000.0, pMatrix);
 
-            mat4.translate(mvMatrix, [0, -40.0, -100]);
-            mat4.rotate(mvMatrix, count / 60 , [0, 1.0, 0]);
-            //mat4.scale(mvMatrix, [0.2, 0.2, 0.2]);
+      for (var i = 0; i < 1; i++) {
+        mat4.identity(mvMatrix);
+        //mat4.scale(mvMatrix, [0.2, 0.2, 0.2]);
 
-            gl.bindBuffer(gl.ARRAY_BUFFER, squareVertexPositionBuffer);
-            var offs = 0, stride = 0;
-            shaderProgram.vertexAttribute.forEach(function (a) { stride += a.len * 4; });
-            shaderProgram.vertexAttribute.forEach(function (a) {
-                gl.vertexAttribPointer(a.location, a.len, gl.FLOAT, false, stride, offs);
-                offs += a.len * 4;
-            });
-            gl.uniformMatrix4fv(shaderProgram.pMatrixUniform, false, pMatrix);
-            gl.uniformMatrix4fv(shaderProgram.mvMatrixUniform, false, mvMatrix);
-            gl.uniform4f(shaderProgram.uScr, gl.viewportWidth / gl.viewportHeight, count / 30, 0, 0);
-            gl.drawArrays(gl.TRIANGLES, 0, squareVertexPositionBuffer.numItems);
-        }
+        mat4.translate(mvMatrix, [0, -40.0, -100]);
+        mat4.rotate(mvMatrix, count / 60, [0, 1.0, 0]);
+        //mat4.scale(mvMatrix, [0.2, 0.2, 0.2]);
+
+        gl.bindBuffer(gl.ARRAY_BUFFER, squareVertexPositionBuffer);
+        var offs = 0, stride = 0;
+        stride = shaderProgram.vertexAttribute.reduce(function (b, a) { return b + a.len * 4; }, 0);
+        shaderProgram.vertexAttribute.forEach(function (a) {
+          gl.vertexAttribPointer(a.location, a.len, gl.FLOAT, false, stride, offs);
+          offs += a.len * 4;
+        });
+        gl.uniformMatrix4fv(shaderProgram.pMatrixUniform, false, pMatrix);
+        gl.uniformMatrix4fv(shaderProgram.mvMatrixUniform, false, mvMatrix);
+        gl.uniform4f(shaderProgram.uScr, gl.viewportWidth / gl.viewportHeight, count / 30, 0, 0);
+        gl.drawArrays(gl.TRIANGLES, 0, squareVertexPositionBuffer.numItems);
+      }
     }
 
     function webGLStart() {
-        var canvas = document.getElementById("lesson01-canvas");
-        initGL(canvas);
-        initShaders();
-        initBuffers();
+      var canvas = document.getElementById("lesson01-canvas");
+      initGL(canvas);
+      initShaders();
+      initBuffers();
 
-        gl.clearColor(0.0, 0.0, 0.0, 1.0);
-        gl.disable(gl.DEPTH_TEST);
-        gl.enable(gl.BLEND);
-        gl.blendFunc(gl.SRC_ALPHA, gl.ONE);
-
+      gl.clearColor(0.0, 0.0, 0.0, 1.0);
+      gl.disable(gl.DEPTH_TEST);
+      gl.enable(gl.BLEND);
+      gl.blendFunc(gl.SRC_ALPHA, gl.ONE);
     }
 
     setInterval(drawScene, 16);
     var alpha = false;
     function toggleAlpha() {
-        alpha ? gl.enable(gl.BLEND) : gl.disable(gl.BLEND);
-        alpha = !alpha;
+      alpha ? gl.enable(gl.BLEND) : gl.disable(gl.BLEND);
+      alpha = !alpha;
     }
 
-</script>
-
-
+  </script>
 </head>
 
 
 <body onload="webGLStart();">
-    <table><tr>
-    <td><canvas id="lesson01-canvas" style="border: none;" width="600" height="400"></canvas></td>
-    <td><input id="toggle" type="button" value="toggle" onclick="toggleAlpha();" /></td>
-    <td><ul id="parameters"></ul></td>
-    </tr></table>
+  <table>
+    <tr>
+      <td>
+        <canvas id="lesson01-canvas" style="border: none;" width="600" height="400"></canvas>
+      </td>
+      <td>
+        <input id="toggle" type="button" value="toggle" onclick="toggleAlpha();" /></td>
+      <td>
+        <ul id="parameters"></ul>
+      </td>
+    </tr>
+  </table>
 </body>
 
 </html>
